--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="icon" href="favicon.png">
     <title>Karen Minski</title>
 </head>
 <body>
-    <img src="karen.jpg" style="width:10%;">
+    <h1 style="font-size:8vw">Karen Minski</h1>
+    <img src="karen.jpg" style="width:15%;">
 </body>
 </html>
