--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.png">
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title>Töö</title>
+    <title>JEWELBLOCKS</title>
 </head>
 
 <body>
