--- a/index.html
+++ b/index.html
@@ -1,39 +1,19 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en" manifest="offline.manifest">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="icon" href="favicon.png">
-	<link rel="manifest" href="manifest.webmanifest">
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<title>Jewelblocks</title>
-	<script src="phaser.min.js"></script>
-	<script src="Boot.js"></script>
-	<script src="Preloader.js"></script>
-	<script src="Game.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="favicon.png">
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <title>JEWELBLOCKS</title>
 </head>
 
-<body style="margin:0px;" bgcolor="#000000">
+<body>
 
-	<div id="gameContainer"></div>
-
-	<script type="text/javascript">
-		window.onload = function () {
-
-			var game = new Phaser.Game(360, 600, Phaser.AUTO, 'gameContainer');
-
-			game.state.add('Boot', BasicGame.Boot);
-			game.state.add('Preloader', BasicGame.Preloader);
-			// game.state.add('MainMenu', BasicGame.MainMenu);
-			game.state.add('Game', BasicGame.Game);
-
-			game.state.start('Boot');
-
-		};
-	</script>
-
+    <script src="index.js"></script>
 </body>
 
 </html>
