--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Muuri - Grid Demo ( 0.4.0 )</title>
+  <title>JEWELBLOCKS</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="favicon.png">  
 </head>
 
 <body>
@@ -12,7 +13,7 @@
 
   <section class="grid-demo">
 
-    <h2 class="section-title"><span>Grid Demo</span></h2>
+    <h2 class="section-title"><span>JEWELBLOCKS</span></h2>
 
     <div class="grid"></div>
 
