--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
   <meta charset="UTF-8">
   <title>JEWELBLOCKS</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="favicon.png">  
+  <link rel="icon" href="favicon.png">
 </head>
 
 <body>
   <!-- Original at https://codepen.io/bcwang/pen/OxRMeb -->
 
   <section class="grid-demo">
-
     <h2 class="section-title"><span>JEWELBLOCKS</span></h2>
-
-    <div class="grid"></div>
-
+    <div class="rainbow-box">
+      <div class="grid"></div>
+    </div>
     <div class="grid-footer">
       <button class="add-more-items btn btn-primary"><i class="material-icons">&#xE145;</i>Add more items</button>
     </div>
