Rainbow text & credits

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 
 <body>
-  <!-- Original at https://codepen.io/bcwang/pen/OxRMeb -->
+  <!-- Original at https://codepen.io/bcwang/pen/OxRMeb -->  
+  <h2 class="rainbow-text">Selle lehe autorid on Karen Minski ja Madis Otenurm<br> 
+  <a href="https://github.com/madiote/2kodutoo">Repositoorium</a></h2>
 
   <section class="grid-demo">
-    <h2 class="section-title"><span>JEWELBLOCKS</span></h2>
+    <h1 class="section-title"><span>JEWELBLOCKS</span></h1>
     <div class="rainbow-box">
       <div class="grid"></div>
     </div>
+    
     <div class="grid-footer">
       <button class="add-more-items btn btn-primary"><i class="material-icons">&#xE145;</i>Add more items</button>
     </div>
