--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JEWELBLOCKS</title>
   <link rel="stylesheet" href="index.css">
   <link rel="icon" href="favicon.png">
@@ -10,11 +11,11 @@
 
 <body>
   <!-- Original at https://codepen.io/bcwang/pen/OxRMeb -->  
-  <h2 class="rainbow-text">Selle lehe autorid on Karen Minski ja Madis Otenurm<br> 
-  <a href="https://github.com/madiote/2kodutoo">Repositoorium</a></h2>
+  <h3 class="rainbow-text">Selle lehe autorid on Karen Minski ja Madis Otenurm<br> 
+  <a target="_blank" rel="noopener noreferrer" href="https://github.com/madiote/2kodutoo">Repositoorium</a></h3>
 
   <section class="grid-demo">
-    <h1 class="section-title"><span>JEWELBLOCKS</span></h1>
+    <h1 class="section-title">JEWELBLOCKS</h1>
     <div class="rainbow-box">
       <div class="grid"></div>
     </div>
