--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="offline.manifest">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JEWELBLOCKS</title>
-  <link rel="stylesheet" href="index.css">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="icon" href="favicon.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <title>JEWELBLOCKS</title>
 </head>
 
 <body>
   <!-- Original at https://codepen.io/bcwang/pen/OxRMeb -->  
   <h3 class="rainbow-text">Selle lehe autorid on Karen Minski ja Madis Otenurm<br> 
-  <a target="_blank" rel="noopener noreferrer" href="https://github.com/madiote/2kodutoo">Repositoorium</a></h3>
+  <a target="_blank" rel="noopener noreferrer" href="https://github.com/madiote/iseseisev-projekt">Repositoorium</a></h3>
 
   <section class="grid-demo">
     <h1 class="section-title">JEWELBLOCKS</h1>
