--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-  <!-- Original at https://codepen.io/bcwang/pen/OxRMeb -->  
-  <h3 class="rainbow-text">Selle lehe autorid on Karen Minski ja Madis Otenurm<br> 
-  <a target="_blank" rel="noopener noreferrer" href="https://github.com/madiote/iseseisev-projekt">Repositoorium</a></h3>
+  <!-- Original at https://codepen.io/bcwang/pen/OxRMeb -->
+  <h3 class="rainbow-text">Selle lehe autorid on Karen Minski ja Madis Otenurm<br>
+    <a target="_blank" rel="noopener noreferrer" href="https://github.com/madiote/iseseisev-projekt">Repositoorium</a>
+  </h3>
 
   <section class="grid-demo">
     <h1 class="section-title">JEWELBLOCKS</h1>
