--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <div class="grid"></div>
     </div>
   </section>
+
+  <button id="pwaAddButton">Lisa kodukuvale</button>
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/muuri/0.4.0/muuri.min.js'></script>
