--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     </div>
   </section>
 
-  <button id="pwaAddButton">Lisa kodukuvale</button>
-
+  <span class="center">
+    <a href="#" id="pwaAddButton" class="rainbow-button" alt="Lisa kodukuvale"></a>
+  </span>
+ 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/muuri/0.4.0/muuri.min.js'></script>
