--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </section>
 
   <span class="center">
-    <a href="" id="pwaAddButton" class="rainbow-button" alt="Lisa kodukuvale"></a>
+    <a href="#" id="pwaAddButton" class="rainbow-button" alt="Lisa kodukuvale"></a>
   </span>
  
   <script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js'></script>
